--- a/indexThesis.html
+++ b/indexThesis.html
@@ -155,7 +155,7 @@
 <body>
     <h1 class="headtext">การศึกษาเขตบริการของสถานศึกษา และผลกระทบจากการเลือกสถานศึกษาต่อสถานศึกษาและนักเรียนระดับมัธยมศึกษาในพื้นที่กรุงเทพมหานครชั้นใน</h1>
     <h1 class="headtext subhead">A STUDY OF SCHOOL CATCHMENT AREA AND THE EFFECTS OF SCHOOL DECISION-MAKING TOWARD SCHOOLS AND SECONDARY SCHOOL STUDENTS IN INNER BANGKOK</h1>
-    <h2 class="headtext" style="font-size : 18px; font-weight: 400;"><b>กฤติน ไคลมี </b><br>ภาควิชาภูมิศาสตร์ คณะอักษรศาสตร์<br>จุฬาลงกรณ์มหาวิทยาลัย<br><br>หมายเลขโทรศัพท์ 092 - 925 - 1451 <br> อีเมล klaimee.k@gmail.com
+    <h2 class="headtext" style="font-size : 18px; font-weight: 400;"><b>กฤติน ไคลมี </b><br>ภาควิชาภูมิศาสตร์ คณะอักษรศาสตร์<br>จุฬาลงกรณ์มหาวิทยาลัย<br>อีเมล klaimee.k@gmail.com
 
     </h2>
 
