--- a/indexThesis.html
+++ b/indexThesis.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
     <meta charset="UTF-8">
-    <title>โครงการวิจัย : การศึกษาเขตบริการของสถานศึกษาและผลกระทบจากการเลือกสถานศึกษาต่อสถานศึกษาและนักเรียนระดับมัธยมศึกษาในพื้นที่กรุงเทพมหานครชั้นใน </title>
+    <title>โครงการวิจัย : การวิเคราะห์เขตบริการของโรงเรียนและปัจจัยที่ส่งผลต่อการเลือกโรงเรียนระดับมัธยมศึกษาในพื้นที่กรุงเทพมหานครชั้นใน </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@300;400;700&family=IBM+Plex+Sans+Thai:wght@200;400;600&display=swap" rel="stylesheet">
@@ -153,8 +153,8 @@
     </style>
 </head>
 <body>
-    <h1 class="headtext">การศึกษาเขตบริการของสถานศึกษา และผลกระทบจากการเลือกสถานศึกษาต่อสถานศึกษาและนักเรียนระดับมัธยมศึกษาในพื้นที่กรุงเทพมหานครชั้นใน</h1>
-    <h1 class="headtext subhead">A STUDY OF SCHOOL CATCHMENT AREA AND THE EFFECTS OF SCHOOL DECISION-MAKING TOWARD SCHOOLS AND SECONDARY SCHOOL STUDENTS IN INNER BANGKOK</h1>
+    <h1 class="headtext">การวิเคราะห์เขตบริการของโรงเรียนและปัจจัยที่ส่งผลต่อการเลือกโรงเรียนระดับมัธยมศึกษาในพื้นที่กรุงเทพมหานครชั้นใน</h1>
+    <h1 class="headtext subhead">AN ANALYSIS OF SCHOOL CATCHMENT AND DETERMINANTS OF SECONDARY SCHOOL CHOICES IN INNER BANGKOK</h1>
     <h2 class="headtext" style="font-size : 18px; font-weight: 400;"><b>กฤติน ไคลมี </b><br>ภาควิชาภูมิศาสตร์ คณะอักษรศาสตร์<br>จุฬาลงกรณ์มหาวิทยาลัย<br>อีเมล klaimee.k@gmail.com
 
     </h2>
@@ -166,7 +166,7 @@
         ในการวิจัย ผู้วิจัยได้คำนึงถึงคุ้มครองข้อมูลส่วนบุคคลเป็นสำคัญ <br> ข้อมูลส่วนตัวของท่านจะถูกเก็บรักษาไว้ ไม่เปิดเผยต่อสาธารณะเป็นรายบุคคล <br> แต่จะรายงานผลการวิจัยเป็นภาพรวม
     </div>
 
-    <div class="content"><span class="tab"></span> เนื่องด้วย นายกฤติน ไคลมี นิสิตวิทยาศาสตรมหาบัณฑิต สาขาวิชาภูมิศาสตร์และภูมิสารสนเทศ คณะอักษรศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย กำลังทำวิจัยในหัวข้อ “การศึกษาเขตบริการของสถานศึกษา และผลกระทบจากการเลือกสถานศึกษาต่อสถานศึกษาและนักเรียนระดับมัธยมศึกษาในพื้นที่กรุงเทพมหานครชั้นใน” ซึ่งเป็นการศึกษาปรากฎการณ์เชิงพื้นที่เกี่ยวกับโรงเรียน ซึ่งประยุกต์ใช้เทคโนโลยีภูมิสารสนเทศ (GIS) การวิจัยเชิงปริมาณ และการวิจัยเชิงคุณภาพในการศึกษาเกี่ยวกับการเข้าโรงเรียน การเลือกโรงเรียนของผู้ปกครอง จนไปถึงการเปลี่ยนแปลง การรับมือของโรงเรียนภายใต้สภาวะการแข่งขันทางการศึกษาที่ดำรงอยู่ในปัจจุบัน การเปลี่ยนแปลงภูมิทัศน์ของเมือง ที่ส่งผลต่อการเปลี่ยนแปลงวิถีชีวิตของนักเรียน ผลกระทบทั้งเชิงบวกและเชิงลบที่ส่งผลทางด้านอารมณ์และความรู้สึกของนักเรียน โดยผู้วิจัยตั้งใจเป็นงานวิจัยที่จะสะท้อนสถานการณ์ทางการศึกษาที่เกิดขึ้นภายในกรุงเทพมหานคร </div>
+    <div class="content"><span class="tab"></span> เนื่องด้วย นายกฤติน ไคลมี นิสิตวิทยาศาสตรมหาบัณฑิต สาขาวิชาภูมิศาสตร์และภูมิสารสนเทศ คณะอักษรศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย กำลังทำวิจัยในหัวข้อ “การวิเคราะห์เขตบริการของโรงเรียนและปัจจัยที่ส่งผลต่อการเลือกโรงเรียนระดับมัธยมศึกษาในพื้นที่กรุงเทพมหานครชั้นใน” ซึ่งเป็นการศึกษาปรากฎการณ์เชิงพื้นที่เกี่ยวกับโรงเรียน ซึ่งประยุกต์ใช้เทคโนโลยีภูมิสารสนเทศ (GIS) การวิจัยเชิงปริมาณ และการวิจัยเชิงคุณภาพในการศึกษาเกี่ยวกับการเข้าโรงเรียน การเลือกโรงเรียนของผู้ปกครอง จนไปถึงการเปลี่ยนแปลง การรับมือของโรงเรียนภายใต้สภาวะการแข่งขันทางการศึกษาที่ดำรงอยู่ในปัจจุบัน การเปลี่ยนแปลงภูมิทัศน์ของเมือง ที่ส่งผลต่อการเปลี่ยนแปลงวิถีชีวิตของนักเรียน ผลกระทบทั้งเชิงบวกและเชิงลบที่ส่งผลทางด้านอารมณ์และความรู้สึกของนักเรียน โดยผู้วิจัยตั้งใจเป็นงานวิจัยที่จะสะท้อนสถานการณ์ทางการศึกษาที่เกิดขึ้นภายในกรุงเทพมหานคร </div>
     <div class="content"><span class="tab"></span>ซึ่งในการศึกษาเกี่ยวกับวิธีการและปัจจัยที่ส่งผลต่อการเลือกโรงเรียนของผู้ปกครอง และการศึกษาการปรับตัวของโรงเรียน บรรยากาศของโรงเรียน ผลกระทบต่อนักเรียน ซึ่งต้องใช้การกระจายแบบสอบถามให้แก่ผู้ปกครอง และการสัมภาษณ์ครูจำนวน 1 คนและนักเรียนจำนวน 6 คน จึงขอความอนุเคราะห์คุณครูเป็นผู้ให้สัมภาษณ์ ติดต่อนักเรียน และกระจายแบบสอบถามให้กับผู้ปกครอง ซึ่งเอกสารต่าง ๆ และการสัมภาษณ์นั้น ผู้วิจัยจะเป็นผู้เตรียมและไปสัมภาษณ์ซึ่งสามารถทำได้ทั้งรูปแบบ Online และรูปแบบ Onsite </div>
     <div class="topic">ที่มาและความสำคัญ</div>
     <div class="content">
